scss/dialogs/_view_profile.scss
div.profile-info-container {
  margin-left: 20px;
  display: flex;
  width: calc(100% - 65px);
  .avatar.large {
    --local-avatar-vertical-margin: 0;
  }
  .profile-info-name-container {
    margin: auto 0px auto 17px;
    flex-grow: 1;
    max-width: 80%;
    input.name {
      font-size: medium;
      font-weight: bold;
      background-color: transparent;
      color: var(--globalText);
    }
    .group-name {
      overflow: hidden;
      text-overflow: ellipsis;
      line-height: 1;
    }
    .address {
      color: #565656;
      user-select: text;
      margin-top: 0.25rem;
      overflow: hidden;
      text-overflow: ellipsis;
    }
  }
}

.status-text {
  padding: 15px 15px;
  color: var(--globalText);
  white-space: pre;
}

.mutual-chats {
  .chat-list-item {
    padding: 0px 20px;
  }
}

.contact-attributes {
  margin: 20px;
  font-size: 1.08em;

  & > div {
    margin-bottom: 8px;
    & > img {
      width: 1.15em;
      height: 1.15em;
      margin-inline-start: 0.3em;
      margin-inline-end: 0.3em;
      vertical-align: middle;
    }

    &.clickable:hover {
      cursor: pointer;
    }
  }
}

